--- a/apartment/small/index.html
+++ b/apartment/small/index.html
@@ -4,11 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> The Small Apartment</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Free HTML5 Template by FREEHTML5.CO - Hugo port by Pieter Saey" />
-    <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive, hugo, static site" />
-    <meta name="author" content="FREEHTML5.CO / Hugo port " />
+    <meta name="description" content="Funtana Apartments - enjoy your vacation!" />
+    <meta name="keywords" content="funtana apartments funtanaapartments croatia istria vacation wifi parking sea rental" />
+    <meta name="author" content="funtanaapartments.com" />
 
-  
 
     
     <meta property="og:title" content=""/>
